
[TestFormattingSnapshots/changelog_preview - 1]
### Major Changes

- Breaking API change

### Minor Changes

- Add OAuth2 support ([#123](https://github.com/org/repo/pull/123) by @alice)
  Includes Google + GitHub providers

### Patch Changes

- Fix memory leak


---

[TestFormattingSnapshots/changelog_with_project_name - 1]
# Changelog

All notable changes to this project will be documented in this file.


## auth@2.0.0 (2024-12-06)
### Major Changes

- Breaking API change

### Minor Changes

- Add OAuth2 support ([#123](https://github.com/org/repo/pull/123) by @alice)
  Includes Google + GitHub providers

### Patch Changes

- Fix memory leak


---
